--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,18 @@ h1 {
 .task{
 }
 
+.lowPriority{
+  color: blue;
+}
+
+.normalPriority{
+  color: yellow;
+}
+
+.highPriority{
+  color: red;
+}
+
 .completed {
   text-decoration: line-through;
 }
