--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* styles.css */
+
+* {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
 body {
   background-color: rgb(0, 113, 158);
   color: white;
@@ -6,6 +11,14 @@ body {
 
 h1 {
   text-align: center;
+}
+
+dialog {
+  background-color: rgb(231, 231, 231);
+}
+
+dialog::backdrop {
+  background-color: rgba(26, 26, 26, 0.877)
 }
 
 .lowPriority{
@@ -22,10 +35,13 @@ h1 {
 
 .collapsed{
   display: none;
+
+  width: 100%;
 }
 
 .completed {
   text-decoration: line-through;
+  color: gray;
 }
 
 img{
@@ -37,7 +53,7 @@ img{
 
 .downIcon {
   display: inline;
-  height: 20px;
+  height: 20px;                                                                                           
 }
 
 .trashIcon {
@@ -51,4 +67,27 @@ footer{
 
 footer > a{
   color: lightblue;
+}
+
+.project {
+  background-color: rgba(247, 247, 247, 0.349);
+  border-radius: 10px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.task {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.dueDate {
+  display: inline;
 }
