--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,21 @@
 }
 
 body {
-  background-color: rgb(0, 113, 158);
+  background-color: #1D546D;
   color: white;
+  margin: 0;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#content {
+  flex: 1 0 auto;
+}
+
+#appName {
+  padding: 10px;
 }
 
 h1 {
@@ -14,7 +27,7 @@ h1 {
 }
 
 dialog {
-  background-color: rgb(231, 231, 231);
+  background-color: #F3F4F4;
 }
 
 dialog::backdrop {
@@ -30,7 +43,7 @@ dialog::backdrop {
 }
 
 .highPriority{
-  color: rgb(255, 104, 104);
+  color: rgb(255, 167, 167);
 }
 
 .collapsed{
@@ -62,11 +75,31 @@ img{
 }
 
 footer{
+  flex-shrink: 0;
+
   text-align: center;
+  background-color: #5F9598;
+  height: 76px;
+  margin: 0;
+  padding: 0;
 }
 
 footer > a{
   color: lightblue;
+  line-height: 38px;
+}
+
+footer > p{
+  margin: 0;
+  line-height: 38px;
+}
+
+#projectsDiv {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .project {
@@ -75,9 +108,11 @@ footer > a{
   padding-bottom: 30px;
   margin-bottom: 30px;
 
+  width: 300px;
+
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap:20px;
 }
 
 .task {
