--- a/src/styles.css
+++ b/src/styles.css
@@ -120,8 +120,7 @@ footer > p{
   padding: 0 0 30px 0;
   margin-bottom: 30px;
 
-  min-width: 300px;
-  max-width: 20%;
+  width: 300px;
 
   display: flex;
   flex-direction: column;
